<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="ST_SAFETY_FBOR" Id="{7a4dd58b-d5a7-48cb-9388-2a432511d245}">
    <Declaration><![CDATA[TYPE ST_SAFETY_FBOR:
STRUCT
	uStatus							: U_SAFETY_OR; 			(* Typ zalezny od bloku *)
	eState							: E_SAFETY_FBState;		(* Enum ze statusem bloku *)
	bGeneralError					: BOOL; 				(* Gdy wystapi chociaz jeden Error *)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>