<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <POU Name="F_SAFETY_StatusFB_TO_OR" Id="{12d0749f-f096-40d1-a4d9-259f55ff4e49}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION F_SAFETY_StatusFB_TO_OR : ST_SAFETY_FBOR
VAR_INPUT
	stFBStatus						: ST_SAFETY_FBStatus; 	(* Struktura ogolna *)
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[F_SAFETY_StatusFB_TO_OR.uStatus.stStatusWords 		:= stFBStatus;									(* Przepisanie *)
F_SAFETY_StatusFB_TO_OR.eState					 	:= stFBStatus.BState;							(* Ustawienie enum *)]]></ST>
    </Implementation>
    <LineIds Name="F_SAFETY_StatusFB_TO_OR">
      <LineId Id="3" Count="0" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>